--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Interactive Game</title>
     <link rel="stylesheet" href="./css/index.css">
 </head>
-<body>
+<body id="body">
     <!-- Main content container -->
     <div class="content-wrapper">
         <!-- Tab content -->
