--- a/html/tab-friend.html
+++ b/html/tab-friend.html
@@ -44,14 +44,14 @@
         <div id="copy-notification">Ссылка скопирована!</div>
 
         <!-- Список приглашённых друзей -->
-        <div class="friends-list">
-            <h2>Ваши приглашённые друзья:</h2>
-            <ul id="friends-list">
-                <!-- Здесь будет динамически генерироваться список друзей -->
-            </ul>
-        </div>
+        <h1>Ваши друзья</h1>
+        <ul id="referral-list">
+            <!-- Список рефералов будет динамически добавлен сюда -->
+        </ul>
+
+        <button id="collect-reward-button" class="long-button">Забрать вознаграждение</button>
     </div>
-    
+    <script src="https://telegram.org/js/telegram-web-app.js"></script>
     <script src="../js/tab-friend.js"></script>
 </body>
 </html>
