--- a/html/tab-friend.html
+++ b/html/tab-friend.html
@@ -49,6 +49,8 @@
             <!-- Список рефералов будет динамически добавлен сюда -->
         </ul>
 
+        <p id="referral-link-display" style="font-weight: bold; color: green;"></p>
+
         <button id="collect-reward-button" class="long-button">Забрать вознаграждение</button>
     </div>
     <script src="https://telegram.org/js/telegram-web-app.js"></script>
